# LangSwarm

./: .env.example  .gitignore  404.html  BIGQUERY_APPEND_ONLY_MIGRATION.md  BIGQUERY_CONFIGURATION_FIX_FINAL.md  CHANGELOG.md  CHANGELOG_dev50_COMPLETE.md  CLEAN_INSTALLATION_STRATEGY.md  CONFIGURATION_SIMPLIFICATION_SUMMARY.md  FINAL_CLEAN_DEPENDENCIES_SUMMARY.md  FIXME.md  FIX_SUMMARY_V1_TOOL_UTF8.md  IMPROVED_ERROR_MESSAGES_SUMMARY.md  INSTALLATION_TIERS_GUIDE.md  INTEGRATION_TESTING_COMPLETE.md  MVP.md  Makefile  NEXT_PHASE_IMPROVEMENT_PLAN.md  OLD_requirements.txt  OPTIONAL_DEPENDENCIES_IMPLEMENTATION.md  PACKAGE_RENAME_SUMMARY.md  QUICK_TEST_GUIDE.md  README.md  REFACTORING_COMPLETE.md  RELEASE_NOTES_v0.0.54.dev50.md  RELEASE_NOTES_v0.0.54.dev55.md  RELEASE_NOTES_v0.0.54.dev56.md  RELEASE_NOTES_v0.0.54.dev57.md  RELEASE_NOTES_v0.0.54.dev58.md  RELEASE_NOTES_v0.0.54.dev60.md  RELEASE_NOTES_v0.0.54.dev64.md  RELEASE_NOTES_v0.0.54.dev65.md  RELEASE_NOTES_v0.0.54.dev67.md  RELEASE_NOTES_v0.0.54.dev68.md  RELEASE_NOTES_v0.0.54.dev69.md  RELEASE_NOTES_v0.0.54.dev70.md  RELEASE_NOTES_v0.0.54.dev73.md  RELEASE_NOTES_v0.0.54.dev74.md  RELEASE_NOTES_v0.0.54.dev75.md  RELEASE_NOTES_v0.0.54.dev76.md  (+86 more)
Logging/: index.html
agentmem/: .gitignore  COMPLETION_PLAN.md  IMPLEMENTATION_COMPLETE.md  pyproject.toml
articles/: LangSwarm Pro Feature Audit - Moving to Autonomous Self-Modification.md
bring-your-own-agent/: index.html
debug/: Makefile  README.md  langswarm_debug.py
debug_traces/: case_1_simple_agent.jsonl  case_2_agent_memory.jsonl  case_3_bigquery_error_handling.jsonl  case_3_bigquery_intent_based.jsonl  case_3_bigquery_list_datasets.jsonl  case_3_bigquery_similarity_search.jsonl  interactive_run_20250918_013950.jsonl  interactive_run_20250918_173043.jsonl  interactive_run_20250919_001528.jsonl
demos/: demo_dynamic_forms.py  demo_enhanced_session_storage.py  demo_flexible_workflow_inputs.py  demo_hybrid_session_setup.py  demo_native_streaming.py  demo_response_api_support.py  demo_session_management.py  demo_smart_tool_auto_discovery.py
docs/: AAF_ORCHESTRATOR_V2_API_SPECIFICATION.md  BIGQUERY_SETUP_GUIDE.md  BIGQUERY_VECTOR_SEARCH_INTEGRATION.md  CONTENT_INVENTORY.md  ENKL_SAAS_DEPLOYMENT_FIXES.md  FEATURE_INDEX.md  INDEX.md  LANGSWARM_SIMPLIFICATION_COMPLETE.md  LLM_USAGE_GUIDE.md  MIGRATION_PLAN.md  MULTI_AGENT_ORCHESTRATION_GUIDE.md  NAVIGATION_IMPROVEMENTS_SUMMARY.md  QUICK_START.md  README.md  SIMPLIFIED_CONFIGURATION_STRATEGY.md  ZERO_CONFIG_CUSTOMIZATION_GUIDE.md  clarification-enhancement-example.md  debug-configuration.md  docs.json  docusaurus.config.js  enhanced-agent-debug-logging.md  handbook.md  index.mdx  sidebars.js  (+7 more)
langswarm-pro/: Dockerfile  LICENSE  README.md  deploy_gcp.sh  pyproject.toml  setup_pubsub.sh
langswarm-pro/langswarm_pro/: __init__.py
langswarm-pro/langswarm_pro/core/: config.py
langswarm-pro/langswarm_pro/core/governance/: models.py  queue.py
langswarm-pro/langswarm_pro/core/memory/: algorithms.py  hybrid.py  models.py
langswarm-pro/langswarm_pro/core/rag/: optimizer.py  pipeline.py
langswarm-pro/langswarm_pro/core/scheduler/: manager.py  models.py
langswarm-pro/langswarm_pro/core/synapse/: protocol.py  router.py  strategies.py
langswarm-pro/langswarm_pro/server/: auth.py  main.py
langswarm-pro/langswarm_pro/server/routers/: governance.py  memory.py  scheduler.py
langswarm-pro/langswarm_pro/tools/: scheduler_tools.py
langswarm-pro/tests/: __init__.py
langswarm-pro/tests/core/governance/: test_queue.py
langswarm-pro/tests/core/memory/: test_framework_integration.py  test_memory_pro.py
langswarm-pro/tests/core/rag/: test_rag_features.py
langswarm-pro/tests/core/scheduler/: test_scheduler.py
langswarm-pro/tests/core/synapse/: test_synapse.py
langswarm-v1-compat/: .gitignore  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  pyproject.toml  setup.py
langswarm-v1-compat/langswarm_v1_compat/: __init__.py  patches.py
(+862 files in other folders)
