[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langswarm-pro"
version = "0.1.0"
description = "Professional extensions for LangSwarm, including governance, advanced tools, and schedulers."
readme = "README.md"
authors = [{name = "Alexander Ekdahl", email = "alexander.ekdahl@gmail.com"}]
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "langswarm>=0.0.54",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
]
keywords = ["AI", "agents", "governance", "scheduling", "enterprise", "LLM"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "black", "mypy", "twine", "build"]
integrations = [
    "langchain-core",
    "llama-index-core"
]

[project.urls]
Homepage = "https://github.com/aekdahl/langswarm"
Documentation = "https://github.com/aekdahl/langswarm#readme"
Repository = "https://github.com/aekdahl/langswarm"
Issues = "https://github.com/aekdahl/langswarm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["langswarm_pro*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
