[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "langswarm-v1-compat"
version = "1.0.0"
description = "Compatibility patches for LangSwarm V1 with modern dependencies"
readme = "README.md"
authors = [{name = "LangSwarm Team", email = "support@langswarm.ai"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["langswarm", "langchain", "compatibility", "patches", "encoding", "utf-8"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourusername/LangSwarm"
Documentation = "https://langswarm.readthedocs.io"
Repository = "https://github.com/yourusername/LangSwarm"
"Bug Tracker" = "https://github.com/yourusername/LangSwarm/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["langswarm_v1_compat"]

[tool.setuptools.package-data]
langswarm_v1_compat = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=langswarm_v1_compat --cov-report=term-missing"

